# OpenLegion

./: .ast-grep-config.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.ast-grep/: README.md
.ast-grep/rule-tests/: call-dunder-exit.yml
.ast-grep/rules/: call-dunder-exit.yml
.github/workflows/: frontend-test.yml  lint.yml  pytest.yml
docs/: README.JP.md  README.KR.md  README.ZH.md
legion/: README.md  __init__.py  chat_router.py  cli.py  conversations.py  server.py  service.py
legion/api/: __init__.py
scripts/: build_web.py
tests/: test_chat_router.py  test_conversations.py  test_dummy.py  test_service.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css
web/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
web/src/components/ai-elements/: code-block.tsx  message.tsx  streamdown.tsx
web/src/components/ui/: DeleteConfirmDialog.tsx  ThemeToggle.tsx  Tooltip.tsx
web/src/hooks/: use-click-outside.ts  use-theme.ts
web/src/pages/: Channels.tsx  Chat.tsx  Chat.utils.test.ts  Config.tsx  CronJobs.tsx  Instances.tsx  Logs.tsx  Nodes.tsx  Overview.tsx  Sessions.tsx  Skills.tsx
web/src/stores/: theme.ts
web/src/test/: setup.ts
